tests/paczka1/fuzzy1/98850460.err
Error in line 3: 8Tsujl1057y S970 51,4
Error in line 11: 45d4Gy S104 43,1
Error in line 28: 8Tsujl1057y A218 91,7
Error in line 26: IIJ A218 6,9
Error in line 21: lror5 S387 43,8
Error in line 34: lror5 S970 58,6
